<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="294dp"
            android:layout_height="104dp"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="26dp"
            android:layout_marginBottom="100dp"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="190dp"
            android:layout_height="190dp"
            app:lottie_rawRes="@raw/appointment"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_2_title"
            android:textColor="#000000"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/slide_2_desc"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/slide_desc" />

    </LinearLayout>


</RelativeLayout>