<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".smarthealthconsultant.Login_Activity.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/gradientbackground"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/txt"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="-32dp"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:text="Patient" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-64dp"
            android:layout_marginStart="44dp"
            android:textSize="24sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="Login" />
        <View
            android:layout_width="match_parent"
            android:layout_height="43dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/bg_screen1"
            android:text="@string/btn_login"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:onClick="reset"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:onClick="register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:progressTint="@color/colorPrimaryDark"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="420dp"
        android:progress="50"
        style="@style/FirebaseUI.TopProgressBar"
        android:visibility="invisible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
